# memstream

./: .gitignore  CHANGELOG.md  README.md  \node-helper-intercept.jsonl  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
examples/: README.md  curated_digest.yaml  curated_digest_v2.yaml  curated_digest_v3.yaml  fetch_rss.yaml  hello.yaml  nightly_brief.yaml  stock_watcher.yaml
src/memstream/: cli.py  hook.py
src/memstream/channels/: base.py  wx.py
src/memstream/core/: config.py  db.py  permissions.py
src/memstream/llm/: base.py  claude_cli.py  parser.py
src/memstream/memory/: distill.py  fold.py  ingest.py  recall.py  search.py
src/memstream/skills/: base.py  digest.py  file.py  http.py  llm_skill.py  mem.py  notify.py  registry.py  shell.py
src/memstream/tasks/: executor.py  model.py  scheduler.py  store.py
systemd/: README.md  memstream-distill.service  memstream-distill.timer  memstream-fold.service  memstream-fold.timer  memstream-ingest.service  memstream-ingest.timer  memstream-scheduler.service
tests/: test_smoke.py
