[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memstream"
version = "0.1.0"
description = "Personal AI OS kernel: time-stream memory + task scheduler + skill registry. LLM-pluggable, offline-tolerant."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "ziren28"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Archiving",
]
keywords = ["ai", "agent", "memory", "llm", "claude", "scheduler", "tasks"]
dependencies = [
    "httpx>=0.24",
]

[project.optional-dependencies]
s3 = ["boto3>=1.28"]
dev = ["pytest>=7", "mypy>=1.0", "ruff>=0.1"]

[project.scripts]
memstream = "memstream.cli:main"

[project.urls]
Homepage = "https://github.com/ziren28/memstream"
Issues = "https://github.com/ziren28/memstream/issues"

[tool.setuptools.packages.find]
where = ["src"]
